@@ -1,4 +1,5 @@
-/*-
+/* $Id: strcspn.c,v 1.2 2004/03/08 22:02:43 sisoft Exp $
+ *
  * Copyright (c) 1990, 1993
  *	The Regents of the University of California.  All rights reserved.
  *
@@ -34,22 +35,12 @@
  * SUCH DAMAGE.
  */
 
-#if defined(LIBC_SCCS) && !defined(lint)
-static char sccsid[] = "@(#)strcspn.c	8.1 (Berkeley) 6/4/93";
-#endif /* LIBC_SCCS and not lint */
-#ifndef lint
-static const char rcsid[] =
-  "$FreeBSD: src/lib/libc/string/strcspn.c,v 1.1.1.1.14.1 2001/07/09 23:30:06 obrien Exp $";
+#include <config.h>
+#ifdef HAVE_SYS_CDEFS_H
+#include <sys/cdefs.h>
 #endif
-
-#ifdef HAVE_CONFIG_H
-# include "config.h"
-#endif
-#if HAVE_SYS_CDEFS_H
-# include <sys/cdefs.h>
-#endif
-#if HAVE_STRING_H
-# include <string.h>
+#ifdef HAVE_STRING_H
+#include <string.h>
 #endif
 
 /*
