@@ -1,4 +1,5 @@
-/*-
+/* $Id: strsep.c,v 1.2 2004/03/08 22:02:43 sisoft Exp $
+ *
  * Copyright (c) 1990, 1993
  *	The Regents of the University of California.  All rights reserved.
  *
@@ -31,26 +32,14 @@
  * SUCH DAMAGE.
  */
 
-#ifdef HAVE_CONFIG_H
-# include "config.h"
+#include <config.h>
+#ifdef HAVE_SYS_CDEFS_H
+#include <sys/cdefs.h>
 #endif
-#if HAVE_SYS_CDEFS_H
-# include <sys/cdefs.h>
+#ifdef HAVE_STRING_H
+#include <string.h>
 #endif
-#if HAVE_STRING_H
-# include <string.h>
-#endif
-#if HAVE_STDIO_H
-# include <stdio.h>
-#endif
-
-#if defined(LIBC_SCCS) && !defined(lint)
-static char sccsid[] = "@(#)strsep.c	8.1 (Berkeley) 6/4/93";
-#endif /* LIBC_SCCS and not lint */
-#ifndef lint
-static const char rcsid[] =
-  "$FreeBSD: src/lib/libc/string/strsep.c,v 1.2.12.1 2001/07/09 23:30:07 obrien Exp $";
-#endif
+#include <stdio.h>
 
 /*
  * Get next token from string *stringp, where tokens are possibly-empty
