@@ -1,4 +1,5 @@
-/*
+/* $Id: usleep.c,v 1.2 2004/03/08 22:02:43 sisoft Exp $
+ *
  * Copyright (c) 1989, 1993
  *	The Regents of the University of California.  All rights reserved.
  *
@@ -31,22 +32,12 @@
  * SUCH DAMAGE.
  */
 
-#if defined(LIBC_SCCS) && !defined(lint)
-#if 0
-static char sccsid[] = "@(#)usleep.c	8.1 (Berkeley) 6/4/93";
+#include <config.h>
+#ifdef HAVE_TIME_H
+#include <time.h>
 #endif
-static char rcsid[] =
-  "$FreeBSD: src/lib/libc/gen/usleep.c,v 1.25 2000/01/27 23:06:22 jasone Exp $";
-#endif /* LIBC_SCCS and not lint */
-
-#ifdef HAVE_CONFIG_H
-# include "config.h"
-#endif
-#if HAVE_TIME_H
-# include <time.h>
-#endif
-#if HAVE_TIME_H
-# include <unistd.h>
+#ifdef HAVE_UNISTD_H
+#include <unistd.h>
 #endif
 
 int
